; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/virtio/extr_virtgpu_gem.c_virtio_gpu_mode_dumb_mmap.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/virtio/extr_virtgpu_gem.c_virtio_gpu_mode_dumb_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_file = type { i32 }
%struct.drm_device = type { i32 }
%struct.drm_gem_object = type { i32 }
%struct.virtio_gpu_object = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @virtio_gpu_mode_dumb_mmap(%struct.drm_file* %0, %struct.drm_device* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.drm_file*, align 8
  %7 = alloca %struct.drm_device*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca %struct.drm_gem_object*, align 8
  %11 = alloca %struct.virtio_gpu_object*, align 8
  store %struct.drm_file* %0, %struct.drm_file** %6, align 8
  store %struct.drm_device* %1, %struct.drm_device** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = icmp ne i32* %12, null
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = call i32 @BUG_ON(i32 %15)
  %17 = load %struct.drm_file*, %struct.drm_file** %6, align 8
  %18 = load i32, i32* %8, align 4
  %19 = call %struct.drm_gem_object* @drm_gem_object_lookup(%struct.drm_file* %17, i32 %18)
  store %struct.drm_gem_object* %19, %struct.drm_gem_object** %10, align 8
  %20 = load %struct.drm_gem_object*, %struct.drm_gem_object** %10, align 8
  %21 = icmp eq %struct.drm_gem_object* %20, null
  br i1 %21, label %22, label %25

22:                                               ; preds = %4
  %23 = load i32, i32* @ENOENT, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %5, align 4
  br label %33

25:                                               ; preds = %4
  %26 = load %struct.drm_gem_object*, %struct.drm_gem_object** %10, align 8
  %27 = call %struct.virtio_gpu_object* @gem_to_virtio_gpu_obj(%struct.drm_gem_object* %26)
  store %struct.virtio_gpu_object* %27, %struct.virtio_gpu_object** %11, align 8
  %28 = load %struct.virtio_gpu_object*, %struct.virtio_gpu_object** %11, align 8
  %29 = call i32 @virtio_gpu_object_mmap_offset(%struct.virtio_gpu_object* %28)
  %30 = load i32*, i32** %9, align 8
  store i32 %29, i32* %30, align 4
  %31 = load %struct.drm_gem_object*, %struct.drm_gem_object** %10, align 8
  %32 = call i32 @drm_gem_object_put_unlocked(%struct.drm_gem_object* %31)
  store i32 0, i32* %5, align 4
  br label %33

33:                                               ; preds = %25, %22
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local %struct.drm_gem_object* @drm_gem_object_lookup(%struct.drm_file*, i32) #1

declare dso_local %struct.virtio_gpu_object* @gem_to_virtio_gpu_obj(%struct.drm_gem_object*) #1

declare dso_local i32 @virtio_gpu_object_mmap_offset(%struct.virtio_gpu_object*) #1

declare dso_local i32 @drm_gem_object_put_unlocked(%struct.drm_gem_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
